Replaced the deprecated method forClass().newInstance().